# HATA

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  llms.txt  pyproject.toml  requirements.txt  robots.txt  run_hata.py  sitemap.xml
.github/workflows/: indexnow.yml
hata/: __init__.py  cli.py  constants.py  engine.py  excel_writer.py  plotting.py
hata/gui/: link_analysis_tab.py  main_window.py  plot_canvas.py  suite_experiment_tab.py  worker.py
nets/: Ragusa18.net  glossGT.net  test.net
